--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,88 +1,50 @@
-nav {
+header {
   display: flex;
   align-items: center;
-  width: 100%;
-  height: 50px;
-  background: #4b6cb7;
-  background: -webkit-linear-gradient(to right, #182848, #4b6cb7);
-  background: linear-gradient(to right, #182848, #4b6cb7);
-  z-index: 33;
-
-  ul {
-    list-style: none;
-    display: flex;
-    align-items: center;
-
-    a {
-      text-decoration: none;
-      text-transform: capitalize;
-      color: white;
-      padding: 8px 16px;
-      font-size: 1rem;
-      cursor: pointer;
-
-      &:hover {
-        color: #d1cc73;
-      }
-    }
-  }
-}
-
-.navbar {
-  display: flex;
   justify-content: center;
-  &__menu {
-    position: absolute;
-    top: 0;
-    left: 10px;
-    display: none;
-    cursor: pointer;
-    & > div {
-      width: 35px;
-      height: 5px;
-      background-color: white;
-      margin: 6px 0;
-      transition: 0.4s;
-    }
+  width: 100%;
+  height: 440px;
+  background: var(--main-bg-color);
+  background-image: url("../assets/images/header2.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    &__change > :nth-child(1) {
-      transform: rotate(-45deg) translate(-9px, 6px);
-    }
-    &__change > :nth-child(2) {
-      opacity: 0;
-    }
-    &__change > :nth-child(3) {
-      transform: rotate(45deg) translate(-8px, -8px);
-    }
+  & > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--main-dark-color);
+  }
+  h1 {
+    margin: 0;
+  }
+  a {
+    text-decoration: none;
+    padding: 0;
+    font: italic normal normal 45px/1.4em "times new roman", times, serif;
+    font-weight: 600;
+    text-transform: capitalize;
+    color: var(--main-dark-color);
+  }
+  span {
+    padding: 0;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    cursor: pointer;
   }
 }
 
 @media (max-width: 768px) {
-  nav {
-    justify-content: space-between;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 30%;
+  .nav__wrapper {
+    height: 0px;
+  }
+  header {
     height: 300px;
-
-    ul {
-      justify-content: center;
-      padding: 0;
-      flex-direction: column;
-      align-items: center;
-
-      li {
-        padding: 8px 0;
-      }
-    }
   }
-  .navbar__menu {
-    display: block;
-    margin: 0;
-    z-index: 44;
-  }
-  .show {
-    display: none;
+  a {
+    font-size: 1.5rem;
   }
 }
