--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,3 +1,6 @@
 @import "./base/reset";
+@import "./abstracts//variables";
 @import "./layout/header";
+@import "./layout/footer";
 @import "./layout/navbar";
+@import "./layout/section";
