--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -4,7 +4,7 @@ header {
   justify-content: center;
   width: 100%;
   height: 440px;
-  background: var(--main-bg-color);
+  background: $main-bg-color;
   background-image: url("../assets/images/header2.jpeg");
   background-position: center;
   background-repeat: no-repeat;
@@ -15,7 +15,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: var(--main-dark-color);
+    color: $main-dark-color;
   }
   h1 {
     margin: 0;
@@ -23,10 +23,10 @@ header {
   a {
     text-decoration: none;
     padding: 0;
-    font: italic normal normal 45px/1.4em "times new roman", times, serif;
+    font-size: 1.4em;
     font-weight: 600;
     text-transform: capitalize;
-    color: var(--main-dark-color);
+    color: $main-dark-color;
   }
   span {
     padding: 0;
@@ -43,8 +43,9 @@ header {
   }
   header {
     height: 300px;
-  }
-  a {
-    font-size: 1.5rem;
+    width: 100%;
+    a {
+      font-size: 1.5rem;
+    }
   }
 }
