--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -27,6 +27,16 @@ nav {
     }
   }
 }
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.nav__wrapper {
+  height: 50px;
+}
 
 .navbar {
   display: flex;
