--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,7 +1,9 @@
 @import "./base/reset";
-@import "./abstracts//variables";
+@import "./abstracts/variables";
 @import "./layout/header";
 @import "./layout/blog-header";
 @import "./layout/footer";
 @import "./layout/navbar";
 @import "./layout/section";
+@import "./pages/blog";
+@import "./components/post";
