--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -1,9 +1,11 @@
+@import "../abstracts/variables";
+
 .section {
   display: flex;
   justify-content: space-between;
   align-items: center;
   min-height: 100vh;
-  background: url("../assets/images/Light-blue.jpg") fixed;
+  background: url("../../assets//images/Light-blue.jpg") fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
