--- a/src/styles/layout/_blog-header.scss
+++ b/src/styles/layout/_blog-header.scss
@@ -1,8 +1,11 @@
+@import "../abstracts/variables";
+
 .blog__header {
   display: flex;
   width: 100%;
   height: 80vh;
   background-color: $blog-bg-color;
+
   &__content {
     display: flex;
     justify-content: space-between;
