--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,3 +1,5 @@
+@import "../abstracts/variables";
+
 header {
   display: flex;
   align-items: center;
@@ -5,7 +7,7 @@ header {
   width: 100%;
   height: 440px;
   background: $main-bg-color;
-  background-image: url("../assets/images/header2.jpeg");
+  background-image: url("../../assets/images/header2.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
