--- a/src/styles/components/_post.scss
+++ b/src/styles/components/_post.scss
@@ -1,6 +1,9 @@
 @import "../abstracts/variables";
 
-.post {
+.posts {
+  &:not(:last-of-type) {
+    border-bottom: 1px solid #ffbb73;
+  }
   &__content {
     h2 {
       margin: 0 0 0.5rem 0;
@@ -12,9 +15,6 @@
     align-items: center;
     padding: 50px 20px;
     width: 100%;
-    &:not(:last-of-type) {
-      border-bottom: 1px solid #ffbb73;
-    }
   }
   &__header {
     color: $dark-light;
@@ -66,6 +66,9 @@
     flex-wrap: wrap;
 
     li {
+      &:first-child {
+        padding-left: 5px;
+      }
       a {
         background-color: #eee;
         border-radius: 3px 0 0 3px;
@@ -114,7 +117,7 @@
 }
 
 @media (max-width: 768px) {
-  .post {
+  .posts {
     &__content {
       display: flex;
       flex-direction: column;
