--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,6 +1,6 @@
 @import "../abstracts/variables";
 
-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,30 +12,25 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
 
-  & > div {
+  &__content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: $main-dark-color;
+    span {
+      padding: 0;
+      font-size: 13px;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      cursor: pointer;
+    }
   }
-  h1 {
+  &__title {
     margin: 0;
-  }
-  a {
-    text-decoration: none;
     padding: 0;
-    font-size: 1.4em;
-    font-weight: 600;
     text-transform: capitalize;
     color: $main-dark-color;
-  }
-  span {
-    padding: 0;
-    font-size: 13px;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    cursor: pointer;
   }
 }
 
