--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -38,11 +38,8 @@
   .nav__wrapper {
     height: 0px;
   }
-  header {
+  .header {
     height: 300px;
     width: 100%;
-    a {
-      font-size: 1.5rem;
-    }
   }
 }
