--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -11,6 +11,44 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background-color: #000046;
+  background: #000046;
+  color: #0b0500;
+  height: 100vh;
+  font-size: 16px;
+  line-height: 1.5;
   font-family: Lato, Sans-Serif;
+}
+::selection {
+  color: #fff;
+  background: #0b0500;
+  text-shadow: none;
+}
+
+p {
+  line-height: 200%;
+  font-size: 1.3rem;
+  margin-top: 0.25rem;
+  margin-bottom: 1rem;
+}
+
+h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  line-height: 1.3;
+  font-family: Montserrat, Sans-serif;
+}
+h2 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  font-family: Montserrat, Sans-serif;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.7rem;
+    margin-bottom: 0;
+  }
 }
