--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -9,76 +9,77 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  section {
+  &__content {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
     color: $main-dark-color;
+  }
 
-    img {
-      height: 100%;
-      width: 350px;
-      padding: 40px;
-    }
-    article {
-      width: 40%;
-      div {
-        height: 40px;
-        min-height: 19px;
-        width: 142px;
-        border: 2px solid $main-dark-color;
-        color: $main-dark-color;
-        padding: 4px 12px;
-        font-size: 0.7rem;
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &:hover {
-          border-color: $light-french;
-        }
-        &:hover a {
-          color: $light-french;
-        }
-        a {
-          text-decoration: none;
-          text-transform: capitalize;
-          font-size: 1rem;
-          white-space: nowrap;
-          color: initial;
-        }
+  &__article {
+    width: 40%;
+    &__link {
+      height: 40px;
+      min-height: 19px;
+      width: 142px;
+      border: 2px solid $main-dark-color;
+      color: $main-dark-color;
+      padding: 4px 12px;
+      font-size: 0.7rem;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:hover {
+        border-color: $light-french;
       }
-      span {
-        display: block;
-        margin-bottom: 10px;
-        width: 116px;
-        height: 5px;
-        border-top: 2px solid rgba(39, 34, 62, 1);
+      &:hover a {
+        color: $light-french;
+      }
+      a {
+        text-decoration: none;
+        text-transform: capitalize;
+        font-size: 1rem;
+        white-space: nowrap;
+        color: initial;
       }
     }
-    h2 {
-      margin: 0;
-      text-transform: capitalize;
+    &--span {
+      display: block;
+      margin-bottom: 10px;
+      width: 116px;
+      height: 5px;
+      border-top: 2px solid rgba(39, 34, 62, 1);
     }
-    p {
+    &--text {
       line-height: 1.65;
       letter-spacing: 0.1px;
       font-size: 1.1rem;
     }
+    &--title {
+      margin: 0;
+      text-transform: capitalize;
+    }
+  }
+  &__img {
+    height: 100%;
+    width: 350px;
+    padding: 40px;
   }
 }
 
 @media (max-width: 768px) {
   .section {
-    section {
+
+    &__content--row, &__content--row-reverse {
       flex-direction: column;
-      article {
-        width: 100%;
-        margin: 0 auto;
-        padding: 20px;
-      }
+    }
+    &__article {
+      width: 100%;
+      margin: 0 auto;
+      padding: 20px;
     }
   }
 }
