--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -13,6 +13,7 @@ body {
   padding: 0;
   background: #000046;
   color: #0b0500;
+  width: 100%;
   height: 100vh;
   font-size: 16px;
   line-height: 1.5;
