--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -9,3 +9,5 @@
 @import "./components/post";
 @import "./pages/post";
 @import "./pages/login";
+@import './pages/dashboard';
+@import './components/editor';
