--- a/src/styles/components/_editor.scss
+++ b/src/styles/components/_editor.scss
@@ -1,65 +1,39 @@
-@import '../abstracts/variables';
 
-.RichEditor-root {
-    background: #fff;
-    border: 1px solid #ddd;
-    font-family: 'Georgia', serif;
-    font-size: 14px;
-    padding: 15px;
-  }
-  
-  .RichEditor-editor {
-    border-top: 1px solid #ddd;
-    cursor: text;
-    font-size: 16px;
-    margin-top: 10px;
-  }
-  
-  .RichEditor-editor .public-DraftEditorPlaceholder-root,
-  .RichEditor-editor .public-DraftEditor-content {
-    margin: 0 -15px -15px;
-    padding: 15px;
-  }
-  
-  .RichEditor-editor .public-DraftEditor-content {
-    min-height: 100px;
-  }
-  
-  .RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
-    display: none;
-  }
-  
-  .RichEditor-editor .RichEditor-blockquote {
-    border-left: 5px solid #eee;
-    color: #666;
-    font-family: 'Hoefler Text', 'Georgia', serif;
-    font-style: italic;
-    margin: 16px 0;
-    padding: 10px 20px;
-  }
-  
-  .RichEditor-editor .public-DraftStyleDefault-pre {
-    background-color: rgba(0, 0, 0, 0.05);
-    font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
-    font-size: 16px;
-    padding: 20px;
-  }
-  
-  .RichEditor-controls {
-    font-family: 'Helvetica', sans-serif;
-    font-size: 14px;
-    margin-bottom: 5px;
-    user-select: none;
-  }
-  
-  .RichEditor-styleButton {
-    color: #999;
-    cursor: pointer;
-    margin-right: 16px;
-    padding: 2px 0;
-    display: inline-block;
-  }
-  
-  .RichEditor-activeButton {
-    color: #5890ff;
-  }
+
+.RichEditor {
+    height: 80%;
+    width: 600px;
+    padding: 16px 8px;
+    box-shadow: #ddd 0px 0px 0px 1px inset;
+    border-radius: 5px;
+    padding: 8px;
+    margin: 16px;
+    &-controls {
+        width: 100%;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        box-shadow: #eee 0px 0px 0px 1px;
+        padding: 4px;
+        margin-bottom: 8px;
+
+    }
+    &-styleButton {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 6px;
+        cursor: pointer;
+        &:hover {
+          background-color: #eee; 
+        }
+        &-icon {
+            width: 13px;
+        } 
+        
+
+    }
+    &-activeButton {
+        background-color: #eee; 
+    }
+}
