--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -10,4 +10,5 @@
 @import "./pages/post";
 @import "./pages/login";
 @import './pages/dashboard';
+@import './components/sidebar';
 @import './components/editor';
