--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,49 +1,35 @@
 @import "../abstracts/variables";
-.sidebar {
+.nav {
+  position: fixed;
+  left: 0;
+  right: 0;
   display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 228px;
-  padding-top: 50px;
+  align-items: center;
   background-color: #333;
-  border-right: 1px solid $main-dark-color;
   &__icon {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: wheat;
+    margin-right: 20px;
+    margin-left: auto;
+    display: inline-block;
+    cursor: pointer;
     &__image {
-      height: 70px;
-      width: 70px;
+      height: 40px;
+      width: 40px;
       border-radius: 50%;
     }
   }
   &__list {
+    width: 100%;
+    list-style: none;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    list-style-type: none;
+    margin: 0;
     padding-left: 0;
-
+    color: white;
     &__item {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: 0px solid #333;
-      padding: 4px 0;
-      margin: 1px 0;
-      width: 100%;
-      height: 50px;
-
-      color: white;
+      padding: 4px 16px;
       cursor: pointer;
-      &:focus {
-        background-color: #212529;
-      }
       &:hover {
-        background-color: #212529;
+        color: #ddd;
       }
     }
   }
