--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -2,12 +2,12 @@
 
 .dashboard {
     display: flex;
+    flex-direction: column;
     background-color: #fff;
     width: 100%;
     height: 100vh;
     &__editor {
         display: flex;
-        justify-content: center;
-        align-items: center; 
+        height: 100%;
     }
 }
