--- a/src/styles/components/_editor.scss
+++ b/src/styles/components/_editor.scss
@@ -3,6 +3,21 @@
   width: 100%;
   border-radius: 5px;
   margin-top: 45px;
+  &-blockquote {
+    border-left: 5px solid #eee;
+    color: #666;
+    font-family: 'Hoefler Text', 'Georgia', serif;
+    font-style: italic;
+    margin: 1.6rem 0;
+    padding: 1rem 2rem;
+  }
+  &-paragraph {
+      margin: 1.6rem 0;
+  }
+  &-strikethrough {
+    color: '#444';
+    text-decoration: 'line-through',
+  }
   &-controls {
     position: fixed;
     left: 0;
