add buttons && preview

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -10,5 +10,8 @@
 @import "./pages/post";
 @import "./pages/login";
 @import './pages/dashboard';
-@import './components/sidebar';
+@import './components/nav';
 @import './components/editor';
+@import "./components/preview";
+@import "./components/toolbar";
+@import "./components/button";
