--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     background-color: #fff;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     &__editor {
         display: flex;
         height: 100%;
