--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -30,6 +30,22 @@
     margin: 0;
     padding-left: 0;
     color: white;
+    &__group {
+      position: relative;
+      display: flex;
+      padding: 0 1rem;
+      z-index: 0;
+      &::after {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        background-color: #cdcfd2;
+        width: 1px;
+        height: 35px;
+        transform: translateY(-50%);
+        content: "";
+      }
+    }
     &__item {
       padding: 4px 16px;
       cursor: pointer;
