--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -16,3 +16,5 @@
 @import "./components/toolbar";
 @import "./components/button";
 @import "./components/profile";
+@import "./components/gallery";
+@import "./components/modal";
