--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -46,8 +46,10 @@
         content: "";
       }
     }
-    &__item {
+    a {
       padding: 4px 16px;
+      text-decoration: none;
+      color: white;
       cursor: pointer;
       &:hover {
         color: #ddd;
