--- a/src/styles/pages/_post.scss
+++ b/src/styles/pages/_post.scss
@@ -26,6 +26,12 @@
     padding-top: 80px;
     font-family: Merriweather, serif;
     color: #484848;
+    figure {
+       img {
+         width: 100%;
+
+    }
+  }
   }
   &__paragraph {
     &__title {
