serve data and add overlay

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -2,6 +2,7 @@
     border: none;
     border-radius: 5px;
     min-width: 80px;
+    max-width: max-content;
     font-size: 1rem;
     color: #333;
     cursor: pointer;
