--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -7,15 +7,59 @@
     height: 100%;
     width: 100%;
     margin-top: 50px;
-    background-color: #eee;
     color: #333;
+    &__content {
+        width: 100%;
+        padding: 20px;
+    }
+    &__photo {
+        position: relative;
+        width: 170px;
+        &:hover {
+            .profile__img {
+                opacity: 0.3;
+            }
+            .profile__photo__overlay {
+                opacity: 1;
+            }
+        }
+        &__overlay{
+            transition: .5s ease;
+            opacity: 0;
+            position: absolute;
+            top: 5%;
+            right: 4%;
+        }
+        &__edit {
+            font-size: .7rem;
+            padding: 4px 2px;
+            background: transparent;
+            border-radius: 4px;
+            border-color: red;
+            color: red;
+            outline: none;
+            cursor: pointer;
+        }
+
+    }
+    &__img {
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: .5s ease;
+        backface-visibility: hidden;
+    }
     &__form {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
         height: 100%;
-        width: 80%;
+        padding: 50px 20px;
+        &__button {
+            //padding-top: 20px;
+            padding-left: 95px;
+        }
         &__group {
             width: 100%;
             display: flex;
@@ -39,7 +83,8 @@
             border: none;
             outline: none;
             font-size: 1rem;
-            height: 100%;
+            line-height: 1.5;
+            //height: max-content;
             width: 100%;
         }
     }
