fix errors and refactor

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -17,4 +17,5 @@
 @import "./components/button";
 @import "./components/profile";
 @import "./components/gallery";
-@import "./components/modal";
+@import "./layout/modal";
+@import "./components/picture";
