--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -2,7 +2,7 @@
 
 .dashboard {
     display: flex;
-    flex-direction: column;
+    //flex-direction: column;
     background-color: #fff;
     width: 100%;
     height: 100%;
