--- a/src/styles/layout/_blog-header.scss
+++ b/src/styles/layout/_blog-header.scss
@@ -8,13 +8,13 @@
 
   &__content {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 30px;
   }
   &__items {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    width: 50%;
     margin-right: 20px;
     h2 {
       margin: 0;
@@ -23,10 +23,17 @@
       font-size: 1.1rem;
       line-height: 200%;
     }
-    img {
-      width: 100%;
-      height: 350px;
-    }
+  }
+  &__image {
+    height: 500px;
+    width: 700px;
+  }
+  &__img {
+    width: 100%;
+    height: 350px;
+  }
+  &__date {
+    font-weight: bold;
   }
 }
 
