--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -6,7 +6,7 @@
 @import "./layout/navbar";
 @import "./layout/section";
 @import "./pages/blog";
-@import "./components/post";
+@import "./components/card-post";
 @import "./pages/post";
 @import "./pages/login";
 @import './pages/dashboard';
@@ -20,3 +20,4 @@
 @import "./layout/modal";
 @import "./components/picture";
 @import "./components/author";
+@import "./components/posts";
