--- a/src/styles/layout/_modal.scss
+++ b/src/styles/layout/_modal.scss
@@ -6,7 +6,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgb(0,0,0);
     background-color: rgba(0, 0, 0, 0.4);
     &-isOpen {
@@ -17,6 +17,20 @@
         margin: 15% auto;
         padding: 20px;
         border: 1px solid #888;
-        width: 80%;
+        height: 80%;
+        width: 90%;
+        overflow-y: scroll;
+    }
+    &__close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+        
+        &:hover, &:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
     }
 }
