--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -3,10 +3,15 @@
     flex-direction: column;
     background: white;
     padding: 150px 20px;
+    height: 100%;
     &__contents {
         display: flex;
         flex-wrap: wrap;
         margin-top: 20px;
-      
+    }
+    &__empty {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
