--- a/src/styles/components/_picture.scss
+++ b/src/styles/components/_picture.scss
@@ -1,4 +1,6 @@
 .picture {
+    position: relative;
+  &__image {
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 4px;
@@ -6,13 +8,23 @@
     height: 160px;
     width: 198px;
     cursor: pointer;
-        &:hover {
-            box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-        }
-        &__checked {
-            background-color: rgba(0, 140, 186, 0.5);
-            &:hover {
-                background-color:transparent;
-            }
-        }
+    &:hover {
+      box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    }
+    &__checked {
+      background-color: rgba(0, 140, 186, 0.5);
+      &:hover {
+        background-color: transparent;
+      }
+    }
+  }
+  &__checked {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    font-weight: bold;
+    height: 10px;
+    width: 10px;
+    color: red;
+  }
 }
