--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -6,7 +6,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    margin-top: 50px;
+    padding-top: 50px;
     color: #333;
     &__content {
         width: 100%;
