--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -6,15 +6,22 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    padding-top: 50px;
+    padding-top: 150px;
+    overflow: hidden;
     color: #333;
     &__content {
-        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        width: 80%;
         padding: 20px;
     }
     &__photo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
         position: relative;
-        width: 170px;
+        width: 300px;
         &:hover {
             .profile__img {
                 opacity: 0.3;
@@ -27,12 +34,12 @@
             transition: .5s ease;
             opacity: 0;
             position: absolute;
-            top: 5%;
-            right: 4%;
+            top: 40%;
+            right: 35%;
         }
         &__edit {
             font-size: .7rem;
-            padding: 4px 2px;
+            padding: 8px 4px;
             background: transparent;
             border-radius: 4px;
             border-color: red;
@@ -55,9 +62,10 @@
         flex-direction: column;
         justify-content: center;
         height: 100%;
-        padding: 50px 20px;
+        width: 100%;
+        padding: 0px 20px;
         &__button {
-            //padding-top: 20px;
+            padding-top: 10px;
             padding-left: 95px;
         }
         &__group {
@@ -78,14 +86,33 @@
             font-size: 1rem;
             padding: 8px 4px;
             width: 100%;
+            color: #666;
         }
         &__textarea {
             border: none;
             outline: none;
             font-size: 1rem;
-            line-height: 1.5;
+            line-height: 2;
             //height: max-content;
             width: 100%;
+            color: #666;
+        }
+    }
+}
+
+@media (max-width: 760px) {
+    .profile {
+        padding-top: 200px;
+        overflow: auto;
+        &__content {
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        &__photo {
+            width: 80%;
+            margin: 20px 0;
         }
     }
 }
