--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -17,7 +17,8 @@ body {
   height: 100vh;
   font-size: 16px;
   line-height: 1.5;
-  font-family: Lato, Sans-Serif;
+  //font-family: Lato, Sans-Serif;
+  font-family: Arial,sans-serif,Helvetica;
 }
 ::selection {
   color: #fff;
@@ -42,6 +43,11 @@ h2 {
   font-size: 2.5rem;
   font-weight: 700;
   font-family: Montserrat, Sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
 }
 
 @media (max-width: 768px) {
