show comment on Blog posts

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -22,3 +22,4 @@
 @import "./components/author";
 @import "./components/posts";
 @import "./components/block-post";
+@import "./components/comment";
