--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background-color: #fdfff7;
+  background-color: #eee;
   &__posts {
     width: 70%;
     height: 100%;
