--- a/src/styles/components/_comment.scss
+++ b/src/styles/components/_comment.scss
@@ -1,8 +1,17 @@
 .comment {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    padding: 16px 0 50px 0;
+    &__board {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
   &__card {
     display: flex;
+    margin-top: 16px;
     padding: 16px 8px;
-    width: 60%;
     background-color: white;
     border-radius: 4px;
   }
@@ -16,5 +25,46 @@
   }
   &__text {
       padding: 8px 4px;
+  }
+  &__form {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      
+      &__group {
+          display: flex;
+          width: 100%;
+          margin-bottom: 8px;
+      }
+      &__label {
+          padding: 8px 4px 0 0;
+      }
+      &__input {
+          width: 100%;
+          border: none;
+          border-radius: 4px;
+          padding: 12px 4px;
+          font-size: 1rem;
+          outline: none;
+          &::placeholder {
+            padding-left: 2px;
+        }
+      }
+      &__textarea {
+          border: none;
+          outline: none;
+          border-radius: 4px;
+          padding: 12px 4px;
+          font-size: 1rem;
+          width: 100%;
+          &::placeholder {
+            padding-left: 2px;
+        }
+      }
+      &__button {
+          display: flex;
+          justify-content: flex-end;
+          width: 100%;
+      }
   }
 }
