--- a/src/styles/components/_comment.scss
+++ b/src/styles/components/_comment.scss
@@ -7,6 +7,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        border-radius: 4px;
+        padding: 0px 4px;
+        background-color: rgb(145, 3, 145);
+        color: white;
     }
   &__card {
     display: flex;
@@ -16,6 +20,7 @@
     border-radius: 4px;
   }
   &__body {
+    width: 100%;
       display: flex;
       flex-direction: column;
   }
@@ -25,46 +30,5 @@
   }
   &__text {
       padding: 8px 4px;
-  }
-  &__form {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      
-      &__group {
-          display: flex;
-          width: 100%;
-          margin-bottom: 8px;
-      }
-      &__label {
-          padding: 8px 4px 0 0;
-      }
-      &__input {
-          width: 100%;
-          border: none;
-          border-radius: 4px;
-          padding: 12px 4px;
-          font-size: 1rem;
-          outline: none;
-          &::placeholder {
-            padding-left: 2px;
-        }
-      }
-      &__textarea {
-          border: none;
-          outline: none;
-          border-radius: 4px;
-          padding: 12px 4px;
-          font-size: 1rem;
-          width: 100%;
-          &::placeholder {
-            padding-left: 2px;
-        }
-      }
-      &__button {
-          display: flex;
-          justify-content: flex-end;
-          width: 100%;
-      }
   }
 }
