--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -1,118 +1,76 @@
 @import "../abstracts/variables";
 
 .profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding-top: 50px;
+  overflow: hidden;
+  color: #333;
+  &__content {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 80%;
+    padding: 20px;
+  }
+  &__photo {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100%;
-    padding-top: 150px;
-    overflow: hidden;
-    color: #333;
-    &__content {
-        display: flex;
-        flex-direction: row-reverse;
-        width: 80%;
-        padding: 20px;
-    }
-    &__photo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        position: relative;
-        width: 300px;
-        &:hover {
-            .profile__img {
-                opacity: 0.3;
-            }
-            .profile__photo__overlay {
-                opacity: 1;
-            }
-        }
-        &__overlay{
-            transition: .5s ease;
-            opacity: 0;
-            position: absolute;
-            top: 40%;
-            right: 35%;
-        }
-        &__edit {
-            font-size: .7rem;
-            padding: 8px 4px;
-            background: transparent;
-            border-radius: 4px;
-            border-color: red;
-            color: red;
-            outline: none;
-            cursor: pointer;
-        }
-
-    }
-    &__img {
+    position: relative;
+    width: 300px;
+    &:hover {
+      .profile__img {
+        opacity: 0.3;
+      }
+      .profile__photo__overlay {
         opacity: 1;
-        display: block;
-        width: 100%;
-        height: auto;
-        transition: .5s ease;
-        backface-visibility: hidden;
+      }
     }
-    &__form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 100%;
-        width: 100%;
-        padding: 0px 20px;
-        &__button {
-            padding-top: 10px;
-            padding-left: 95px;
-        }
-        &__group {
-            width: 100%;
-            display: flex;
-            align-items: center;
-            margin-bottom: 4px;
-        }
-        &__label {
-            width: 120px;
-            font-size: 1.2rem;
-            padding: 0 4px;
-        }
-        &__input {
-            border: none;
-            outline: none;
-            border-radius: 4px;
-            font-size: 1rem;
-            padding: 8px 4px;
-            width: 100%;
-            color: #666;
-        }
-        &__textarea {
-            border: none;
-            outline: none;
-            font-size: 1rem;
-            line-height: 2;
-            //height: max-content;
-            width: 100%;
-            color: #666;
-        }
+    &__overlay {
+      transition: 0.5s ease;
+      opacity: 0;
+      position: absolute;
+      top: 40%;
+      right: 35%;
     }
+    &__edit {
+      font-size: 0.7rem;
+      padding: 8px 4px;
+      background: transparent;
+      border-radius: 4px;
+      border-color: red;
+      color: red;
+      outline: none;
+      cursor: pointer;
+    }
+  }
+  &__img {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: 0.5s ease;
+    backface-visibility: hidden;
+  }
 }
 
 @media (max-width: 760px) {
-    .profile {
-        padding-top: 200px;
-        overflow: auto;
-        &__content {
-            width: 100%;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-        &__photo {
-            width: 80%;
-            margin: 20px 0;
-        }
+  .profile {
+    padding-top: 200px;
+    overflow: auto;
+    &__content {
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
+    &__photo {
+      width: 80%;
+      margin: 20px 0;
+    }
+  }
 }
