--- a/src/styles/layout/_modal.scss
+++ b/src/styles/layout/_modal.scss
@@ -15,9 +15,9 @@
     &__content {
         background-color: #fefefe;
         margin: 15% auto;
-        padding: 20px;
+        padding: 20px 20px 300px 20px;
         border: 1px solid #888;
-        height: 80%;
+        height: 100%;
         width: 90%;
         overflow-y: scroll;
     }
