--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -8,49 +8,11 @@
     margin: 0 auto;
     height: 100vh;
     color: white;
-    width: 100%;
-    &__form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 20%;
-
-        &--label {
-            padding: 8px 4px 0px 0px;
-        }
-        &--input {
-            border: none;
-            border-radius: 4px;
-            width: 100%;
-            padding: 12px 4px;
-            font-size: 1rem;
-            outline: none;
-            &::placeholder {
-                padding-left: 2px;
-            }
-        }
-    }
-    &__button {
-        padding: 8px;
-        border: none;
-        font-size: 1.3rem;
-        font-weight: 600;
-        max-width: 100px;
-        border-radius: 5px;
-        color: $main-bg-color;
-        background-color: white;
-        cursor: pointer;
-        outline: none;
-        margin-top: 16px;
-        &:hover {
-            color: $light-french;
-            background-color: $main-dark-color;
-        }
-    }
+    width: 30%;
 }
 
 @media (max-width: 768px) {
-    .login__form {
+    .login {
         width: 80%;
     }
 }
