--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -5,7 +5,7 @@
   right: 0;
   display: flex;
   align-items: center;
-  justify-items: center;
+  justify-content: center;
   padding: 5px 0;
   background-color: #333;
   z-index: 44;
@@ -46,6 +46,9 @@
         content: "";
       }
     }
+    &__logout {
+      display: none;
+    }
     a {
       padding: 4px 16px;
       text-decoration: none;
@@ -56,23 +59,39 @@
       }
     }
   }
-  &__menu {
+  &__logout {
     position: absolute;
     right: 20px;
-    top: 45px;
+    top: 40px;
     list-style: none;
-    padding: 0;
+    padding: 0 0 10px 0;
     border-radius: 5px;
-    height: 150px;
-    width: 100px;
-    background-color: #444;
+    height: max-content;
+    width: 120px;
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: rgba(255, 0, 0, 0.6);
     &-hide {
       display: none;
     }
+  }
+  &__menu {
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    list-style: none;
+    padding: 0;
+    border-radius: 5px;
+    height: max-content;
+    width: 120px;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     &__item {
       text-align: center;
       cursor: pointer;
@@ -80,6 +99,48 @@
       &:hover {
         color: #ccc;
       }
+    }
+  }
+}
+
+@media (max-width: 560px) {
+  .nav {
+    background-color: transparent;
+    &__list {
+      display: none;
+      &__group {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 5px;
+        &:not(:first-child) {
+          border-top: 1px solid white;
+        }
+        &::after {
+          display: none;
+        }
+      }
+      &__logout {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5px;
+        padding: 5px;
+        width: 100%;
+        border-top: 1px solid red;
+        border-radius: 4px;
+        color: rgba(255, 0, 0, 0.6);
+      }
+    }
+    &__menu {
+      display: flex;
+      &-hide {
+        display: none;
+      }
+    }
+    &__logout {
+      display: none;
     }
   }
 }
