--- a/src/styles/components/_profile.scss
+++ b/src/styles/components/_profile.scss
@@ -12,6 +12,9 @@
   &__content {
     display: flex;
     flex-direction: row-reverse;
+    border-radius: 16px;
+    background-color: #333;
+    color: white;
     width: 80%;
     padding: 20px;
   }
@@ -19,6 +22,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 15px;
     height: 100%;
     position: relative;
     width: 300px;
@@ -50,10 +54,11 @@
   }
   &__img {
     opacity: 1;
-    display: block;
     width: 100%;
+    height: 100%;
     height: auto;
     transition: 0.5s ease;
+    border-radius: 8px;
     backface-visibility: hidden;
   }
 }
@@ -62,6 +67,7 @@
   .profile {
     padding-top: 200px;
     overflow: auto;
+    background-color: #333;
     &__content {
       width: 100%;
       justify-content: center;
