--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -25,3 +25,4 @@
 @import "./components/comment";
 @import "./components/form";
 @import "./components/comment-list";
+@import "./components/loading";
