--- a/src/styles/components/_toolbar.scss
+++ b/src/styles/components/_toolbar.scss
@@ -17,6 +17,10 @@
     }
     
     &__toggle {
+        border: 1px solid $dark-light;
+        border-radius: 4px;
+        padding: 4px;
+        cursor: pointer;
         display: none;
     }
 }
