--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -12,15 +12,16 @@
   &__section {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    &-h2 {
-      font-size: 2rem;
-      letter-spacing: 10px;
-      text-shadow: 3px 6px 3px rgba(0, 0, 0, 0.1);
-      font-variant: small-caps;
+    margin: 0 auto;
+    &__link {
+      display: flex;
+      flex-direction: column;
+      a {
+        padding: 0.4em 0;
+        color: white;
+        font-weight: bold;
+        font-size: 0.9em;
+      }
     }
     &__list {
       display: flex;
@@ -33,36 +34,6 @@
     &__items {
       padding: 0 10px;
       animation: bounce 1s ease infinite alternate;
-    }
-    &__link {
-      text-decoration: none;
-      color: $light-french;
-      word-spacing: 0;
-    }
-    &__linkedin {
-      width: 50px;
-      height: 50px;
-      -webkit-mask: url("../../assets/icons/linkedin.svg") no-repeat center;
-      mask: url("../../assets/icons/linkedin.svg") no-repeat center;
-      background-color: white;
-      background-position: center;
-      background-repeat: no-repeat;
-      &:hover {
-        background-color: $light-french;
-      }
-    }
-
-    &__facebook {
-      width: 50px;
-      height: 50px;
-      -webkit-mask: url("../../assets/icons/facebook.svg") no-repeat center;
-      mask: url("../../assets/icons/facebook.svg");
-      background-color: white;
-      background-position: center;
-      background-repeat: no-repeat;
-      &:hover {
-        background-color: $light-french;
-      }
     }
   }
   &__subtitle {
