--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -34,7 +34,7 @@ p {
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 2.5em;
   font-weight: 700;
   line-height: 1.3;
   font-family: Montserrat, Sans-serif;
@@ -52,7 +52,7 @@ a {
 
 @media (max-width: 768px) {
   h1 {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
   h2 {
     font-size: 1.7rem;
