--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -2,56 +2,63 @@
 
 .footer {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
   background: #000046;
   background: -webkit-linear-gradient(to right, #1cb5e0, #000046);
   background: linear-gradient(to right, #1cb5e0, #000046);
   &__section {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    &:nth-child(2) {
+      margin: 0 auto;
+    }
     &__link {
-      display: inline-flex;
-      flex-direction: column;
       a {
-        padding: 0.4em 0;
+        padding: .5em;
         color: white;
         font-weight: bold;
         font-size: 0.9em;
+        &:hover {
+          color: #000046;
+        }
       }
+    
     }
     &__list {
       display: flex;
-      justify-content: center;
-      align-items: center;
       list-style-type: none;
-      margin: 0;
-      padding: 0;
     }
     &__items {
-      padding: 0 10px;
-      animation: bounce 1s ease infinite alternate;
+      padding: 0 .5em;
     }
   }
   &__subtitle {
     font-size: 0.7rem;
     text-transform: capitalize;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
     align-self: flex-end;
-    margin: 0 8px 8px 0;
-    width: 100%;
-    height: 100%;
     color: white;
-    word-spacing: 3px;
+    word-spacing: .1em;
+    padding-right: .5em;
     &__link {
       margin-left: 4px;
       text-decoration: none;
       color: $light-french;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &__section {
+      &__list {
+        margin: 0;
+        padding: 0;
+      }
+      &__link {
+        padding-left: 0;
+      }
+    }
+    &__subtitle {
       word-spacing: 0;
     }
   }
