--- a/src/styles/pages/_post.scss
+++ b/src/styles/pages/_post.scss
@@ -3,7 +3,7 @@
   height: 50px;
 }
 .post {
-  background-color: #f9f9f9;
+  background-color: white;
   &__article,
   &__footer,
   &__header {
@@ -15,7 +15,7 @@
 
   &__article {
     padding-top: 80px;
-    font-family: Merriweather, serif;
+    //font-family: Merriweather, serif;
     color: #484848;
     figure {
        img {
@@ -76,6 +76,7 @@
     }
     &__facebook {
       mask: url("../../assets/icons/facebook-2.svg");
+
     }
     &__linkedin {
       mask: url("../../assets/icons/linkedin-2.svg");
@@ -86,8 +87,8 @@
     &__facebook,
     &__linkedin,
     &__twitter {
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
       background-color: $main-bg-color;
       cursor: pointer;
       margin: 0 0.25rem;
