refactor home page and footer

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -26,3 +26,4 @@
 @import "./components/form";
 @import "./components/comment-list";
 @import "./components/loading";
+@import "./components/latest";
