--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -17,6 +17,7 @@
     width: 100%;
     z-index: -1;
     background: $main-bg-color;
+    background-image: url('../../assets/images/head.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,7 +27,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: $main-dark-color;
+    color: $white;
     span {
       padding: 0;
       font-size: 13px;
@@ -39,7 +40,7 @@
     margin: 0;
     padding-bottom: .2em;
     text-transform: capitalize;
-    color: $main-dark-color;
+    color: $white;
   }
 }
 
