--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -5,9 +5,11 @@ nav {
   align-items: center;
   width: 100%;
   height: 50px;
-  background: #4b6cb7;
-  background: -webkit-linear-gradient(to right, #182848, #4b6cb7);
-  background: linear-gradient(to right, #182848, #4b6cb7);
+  background: $black;
+  color: $white;
+  //background: #4b6cb7;
+  //background: -webkit-linear-gradient(to right, #182848, #4b6cb7);
+  //background: linear-gradient(to right, #182848, #4b6cb7);
   z-index: 33;
 
   ul {
@@ -18,13 +20,13 @@ nav {
     a {
       text-decoration: none;
       text-transform: capitalize;
-      color: white;
+      //color: white;
       padding: 8px 16px;
       font-size: 1rem;
       cursor: pointer;
 
       &:hover {
-        color: #d1cc73;
+        color: $primary;
       }
     }
   }
@@ -68,6 +70,26 @@ nav {
       transform: rotate(45deg) translate(-8px, -8px);
     }
   }
+  &__list {
+    width: 100%;
+  }
+  &__social {
+    margin-left: auto;
+    &__link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    &__icon {
+      border: 1px solid $white;
+      border-radius: 50%;
+      background-color: $white;
+      &:hover {
+        background-color: $primary;
+        border-color: $primary;
+      }
+    }
+  }
 }
 
 @media (max-width: 768px) {
@@ -90,12 +112,17 @@ nav {
       }
     }
   }
-  .navbar__menu {
-    display: block;
-    margin: 0;
-    z-index: 44;
-  }
-  .show {
-    display: none;
+  .navbar {
+    &__menu {
+      display: block;
+      margin: 0;
+      z-index: 44;
+    }
+    &__social {
+      display: none;
+    }
+    .show {
+      display: none;
+    }
   }
 }
