--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,5 +1,6 @@
 @import "./base/reset";
 @import "./abstracts/variables";
+@import "./abstracts/animation";
 @import "./layout/header";
 @import "./layout/jumbotron";
 @import "./layout/footer";
@@ -27,3 +28,4 @@
 @import "./components/comment-list";
 @import "./components/loading";
 @import "./components/latest";
+@import "./components/subscription";
