--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -4,21 +4,22 @@
     min-width: 80px;
     max-width: max-content;
     font-size: 1rem;
-    color: #333;
+    text-transform: capitalize;
+    color: $white;
     cursor: pointer;
-    background-color: rgb(228, 228, 228);
+    background-color: $black;
     padding: 8px 4px;
-    margin: 0 4px;
+    margin: 0 .5em;
     outline: none;
     &:focus {
-        color: white;
-        background-color: #333;
+        color: $white;
+        background-color: $dark;
     }
     &:active {
-        color: #333;
-        background-color: #333;
+        color: $primary;
+        background-color: $dark;
     }
     &:hover {
-        background-color: rgb(133, 133, 133);
+        background-color: $dark;
     }
 }
