--- a/src/styles/layout/_modal.scss
+++ b/src/styles/layout/_modal.scss
@@ -15,20 +15,20 @@
     &__content {
         background-color: #fefefe;
         margin: 15% auto;
-        padding: 20px 20px 300px 20px;
-        border: 1px solid #888;
+        padding: 1.5em 2em;
+        border-radius: .25em;
         height: 100%;
         width: 90%;
         overflow-y: scroll;
     }
     &__close {
-        color: #aaa;
+        color: $dark;
         float: right;
         font-size: 28px;
         font-weight: bold;
         
         &:hover, &:focus {
-            color: black;
+            color: $black;
             text-decoration: none;
             cursor: pointer;
         }
