--- a/src/styles/abstracts/_animation.scss
+++ b/src/styles/abstracts/_animation.scss
@@ -1,21 +1,40 @@
-
-
-
 @keyframes shake {
-    10%, 90% {
-      transform: translate3d(-1px, 0, 0);
-    }
-    
-    20%, 80% {
-      transform: translate3d(2px, 0, 0);
-    }
-  
-    30%, 50%, 70% {
-      transform: translate3d(-4px, 0, 0);
-    }
-  
-    40%, 60% {
-      transform: translate3d(4px, 0, 0);
-    }
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
   }
-  
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+@keyframes change {
+  0% {
+    background-size: 0 0, 0 0, 0 0;
+  }
+  25% {
+    background-size: 0 0, 0 0, 30% 30%;
+  }
+  50% {
+    background-size: 10% 10%, 40% 40%, 60% 60%;
+  }
+  75% {
+    background-size: 100% 100%, 100% 100%, 100% 100%;
+  }
+  100% {
+    background-size: 100% 100%, 100% 100%, 100% 100%;
+  }
+}
