--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -21,8 +21,8 @@ body {
   height: 100vh;
   font-size: 16px;
   line-height: 1.5;
-  //font-family: Lato, Sans-Serif;
-  font-family: "Nunito", sans-serif;
+  font-family: Lato, Sans-Serif;
+  //font-family: "Nunito", sans-serif;
 }
 ::selection {
   color: #fff;
