--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -6,13 +6,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px 0;
-  background-color: #333;
+  padding: .1em 0;
+  background-color: $black;
   z-index: 44;
   &__icon {
     position: relative;
-    margin-right: 20px;
+    margin-right: .5em;
     margin-left: auto;
+    margin-top: .5em;
     display: inline-block;
     cursor: pointer;
 
