--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -1,12 +1,16 @@
 @import "../abstracts/variables";
 
+.about {
+  height: 100vh;
+}
 .section {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  height: 100%;
   min-height: 100vh;
-  padding-top: 2em;
+  padding-top: 1em;
   //background: url("../../assets//images/Light-blue.jpg") fixed;
   background-color: $lighter;
   background-position: center;
@@ -25,25 +29,12 @@
 
   &__article {
     width: 40%;
-    a {
-      display: inline-block;
-      padding: 0.8em 1.7em;
-      background-color: #5099ff;
-      font-weight: bold;
-      border-radius: 2em;
-      text-transform: uppercase;
-      color: white;
-      margin-top: 1.5em;
-      &:hover {
-        color: $main-dark-color;
-      }
-    }
     &--span {
       display: block;
       margin-bottom: 10px;
       width: 116px;
       height: 5px;
-      border-top: 2px solid rgba(39, 34, 62, 1);
+      //border-top: 2px solid rgba(39, 34, 62, 1);
     }
     &--text {
       line-height: 1.65;
@@ -55,16 +46,21 @@
       color: $black;
       margin: 0;
       text-transform: capitalize;
+     + h3 {
+       font-size: 1.7em;
+       margin: 0;
+     }
     }
   }
   &__img {
-    height: 100%;
+    height: 350px;
     width: 350px;
     padding: 40px;
+    border-radius: 50%;
   }
   &__social {
     padding: 0;
-    align-self: flex-end;
+    align-self: center;
     list-style-type: none;
     margin-left: 10em;
     &__link {
@@ -73,6 +69,7 @@
       img {
         height: 40px;
         width: 40px;
+        
         &:hover {
           border-radius: 50%;
           background: $primary;
@@ -96,46 +93,62 @@
       padding: 0.5em 1em;
       font-size: 0.9em;
       font-weight: bold;
-      a {
-        color: $primary;
-        text-decoration: none;
-        text-transform: uppercase;
-      }
       a:hover {
         color: $black;
       }
     }
   }
-}
 
-@keyframes change {
-  0% {
-    background-size: 0 0, 0 0, 0 0;
+  &__links {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
-  25% {
-    background-size: 0 0, 0 0, 30% 30%;
-  }
-  50% {
-    background-size: 10% 10%, 40% 40%, 60% 60%;
-  }
-  75% {
-    background-size: 100% 100%, 100% 100%, 100% 100%;
-  }
-  100% {
-    background-size: 100% 100%, 100% 100%, 100% 100%;
+  &__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 8em;
+    width: 8em;
+    font-size: .6em;
+    background-color: $primary;
+    color: $white;
+    border-radius: 50%;
+    padding: .5em;
+    margin-right: .8em;
+    text-transform: uppercase;
+    cursor: pointer;
+    &:hover {
+      border: 1px solid $white;
+      color: $dark;
+    }
   }
 }
 
 @media (max-width: 768px) {
-  .section {
+  .section{
+    height: auto;
+    &__content {
+      flex-direction: column;
+      width: 100%;
+    }
+    &__article {
+      width: 90%;
+    }
+    &__img {
+      height: 200px;
+      width: 200px;
+      padding: 0;
+    }
+  }
+  /* .section {
+    display: block;
     &__content--row,
     &__content--row-reverse {
       flex-direction: column;
     }
     &__img {
-      height: 50%;
-      width: 50%;
-      padding: 0;
+    
     }
     &__article {
       width: 100%;
@@ -155,5 +168,5 @@
         font-weight: bold;
       }
     }
-  }
+  } */
 }
