--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -3,7 +3,7 @@
 .dashboard {
     display: flex;
     //flex-direction: column;
-    background-color: #fff;
+    background-color: $lighter;
     width: 100%;
     height: 100vh;
 }
